--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<img src="images/git-logo.png" alt="git logo" style="height: 180px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
 					<h2>Git : Concepts avancés</h2>
 					<p>
-						<small>Crée par <a href="https://www.linkedin.com/in/ivan-mananjara-8b773b72/">Ivan M.</a></small>
+						<small>Crée par <a target="_blank" href="https://www.linkedin.com/in/ivan-mananjara-8b773b72/">Ivan Mananjara</a></small>
 					</p>
 				</section>
 				<section data-auto-animate data-auto-animate-id="who-am-i">
@@ -1931,6 +1931,49 @@
 					<section>
 						<h2>Conclusion</h2>
 					</section>
+					<section data-auto-animate data-auto-animate-id="conclusion">
+						<h3>Que retenir de ce cours ?</h3>
+					</section>
+					<section data-auto-animate data-auto-animate-id="conclusion">
+						<h3>Que retenir de ce cours ?</h3>
+						<p>Il est nécessaire de bien comprendre pour mieux utiliser</p>
+					</section>
+					<section data-auto-animate data-auto-animate-id="conclusion">
+						<h3>Que retenir de ce cours ?</h3>
+						<p>Il est nécessaire de bien comprendre pour mieux utiliser</p>
+						<p>Avec Git, tout est possible !!!</p>
+					</section>
+					<section>
+						<h3>Pour approfondir</h3>
+						<p>Conférences Devoxx sur Git</p>
+						<p>La <a target="_blank" href="https://git-scm.com/">documentation</a> officielle de git</p>
+					</section>
+					<section>
+						<h3>Quelques sources</h3>
+						<ul>
+							<li>
+								<a target="_blank" href="https://www.paris-web.fr/2019/conferences/git-reset-rien-ne-se-perd-tout-se-transforme.php">
+									Conférence Paris Web - Git reset rien ne se perd, tout se transforme
+								</a>
+							</li>
+							<li>
+								<a target="_blank" href="https://blog.eriatolc.fr/git-fsck-ca-sauve-des-vies/">Article : git fsck, ça sauve des vies</a>
+							</li>
+							<li>
+								<a target="_blank" href="https://delicious-insights.com/fr/articles-et-tutos/git-bisect/">
+									Article sur le git bisect
+								</a>
+							</li>
+							<li>
+								<a target="_blank" href="https://medium.com/@CarrieGuss/how-to-recover-from-a-git-hard-reset-b830b5e3f60c#.6grpr3abr">
+									Article : Comment récupérer d'un reset --hard
+								</a>
+							</li>
+						</ul>
+					</section>
+				</section>
+				<section>
+					<h1>Merci de m'avoir écouté :)</h1>
 				</section>
 			</div>
 		</div>
